text is overlapping issue solved

--- a/script/css/admin.scss
+++ b/script/css/admin.scss
@@ -6045,7 +6045,7 @@ span.initials.avatar_name {
         padding: 0;
 
         #comments-section {
-            .comment-row {
+            .comment-row.customer  {
                 .comment-bubble {
                     display: grid;
                     align-items: center;
